# CardioRisk_API

./: .coverage  .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
ml/explainability/: cohort_shap_analyzer.py  temporal_shap_aggregator.py  waterfall_builder.py
ml/models/: feature_importance.csv  global_shap_summary.csv  temporal_shap_stats.csv
ml/pipelines/: 00_seed_postgres.py  04_train_lgbm.py  06_shap_analysis.py  08_simulate_stream.py
notebooks/: 00_workers_overview.md  01_audit_service.md  02_inference_service.md  03_drift_detection_service.md  04_continuous_training_service.md  05_seed_database.md  06_train_lightgbm.md  07_shap_analysis.md  08_simulate_stream.md  START_HERE.md
scripts/: init_db.sql
services/audit_service/: main.py
services/ct_service/: main.py
services/drift_service/: main.py
services/inference_service/: main.py
src/application/ports/: interfaces.py
src/application/use_cases/: calculate_risk_profile.py  generate_temporal_shap.py  ingest_patient_telemetry.py  run_counterfactual.py
src/domain/entities/: enums.py  patient_cardiovascular_record.py
src/domain/events/: cardiovascular_events.py
src/domain/services/: bp_classifier.py  feature_validator.py
src/domain/value_objects/: risk_trajectory.py
src/infrastructure/db/: database.py  models.py  patient_repository.py
src/infrastructure/delta/: feature_store.py
src/infrastructure/llm/: openrouter_gateway.py
src/infrastructure/messaging/: consumer_base.py  publisher.py  websocket_manager.py
src/infrastructure/ml/: lightgbm_adapter.py  shap_adapter.py
src/interfaces/api/: dependencies.py  main.py  (+1 more)
tests/unit/: test_temporal_shap.py
(+5 files in other folders)
