[project]
name = "cardioriskapi"
version = "0.1.0"
description = "Interactive Explainable AI Dashboard for Personalized Cardiovascular Risk Trajectories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
messaging = [
    "aio-pika>=9.4",
    "pika>=1.3",
]
delta = [
    "deltalake>=0.17",
    "pyarrow>=16",
]
db = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]
ml = [
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.4",
    "mlflow>=2.13",
]
xai = [
    "shap>=0.45",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]
llm = [
    "openai>=1.30",   # OpenRouter uses OpenAI-compatible SDK
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "testcontainers[rabbitmq,postgresql]>=4.7",
    "hypothesis>=6.100",
    "httpx>=0.27",
]

[project.scripts]
cardiorisk = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
